src/test/compile-fail/attr-bad-crate-attr.rc
// error-pattern: expected `module`

#[attr = "val"];
#[attr = "val"] // Unterminated
